--- a/Inventory/Views/Shared/_Layout.cshtml
+++ b/Inventory/Views/Shared/_Layout.cshtml
@@ -52,6 +52,7 @@
                         <ul class="dropdown-menu">
                             <li><a asp-area="" asp-controller="Companies" asp-action="Index">Empresas</a></li>
                             <li><a asp-area="" asp-controller="Employees" asp-action="Index">Colaboradores</a></li>
+                            <li><a asp-area="" asp-controller="EquipmentTypes" asp-action="Index">Tipos de Equipamentos</a></li>
                             <li><a asp-area="" asp-controller="Equipments" asp-action="Index">Equipamentos</a></li>
                         </ul>
                     </li>
