--- a/Inventory/Views/Employees/Index.cshtml
+++ b/Inventory/Views/Employees/Index.cshtml
@@ -18,11 +18,11 @@
 <table id="tabela" class="table table-striped table-hover" style="width:100%">
     <thead>
         <tr class="success">
-            <th>@Html.DisplayNameFor(model => model.Company.Name)</th>
-            <th>@Html.DisplayNameFor(model => model.Enrollment)</th>
             <th>@Html.DisplayNameFor(model => model.Name)</th>
+            <th>@Html.DisplayNameFor(model => model.Enrollment)</th>
+            <th>@Html.DisplayNameFor(model => model.Company.Name)</th>
             <th>@Html.DisplayNameFor(model => model.Email)</th>
-            <th>@Html.DisplayNameFor(model => model.ExternEmail)</th>
+            @*<th>@Html.DisplayNameFor(model => model.ExternEmail)</th>*@
             <th>@Html.DisplayNameFor(model => model.RG)</th>
             <th>@Html.DisplayNameFor(model => model.CPF)</th>
             <th>@Html.DisplayNameFor(model => model.Active)</th>
@@ -33,51 +33,30 @@
     <tbody>
         @foreach (var item in Model)
         {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Company.Name)
-                    @*@Html.ActionLink(item.Company.Name, "Details", "Employees", new { id = item.EmployeeId }, null)*@
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Enrollment)
-                    @*@Html.ActionLink(item.Enrollment, "Details", "Employees", new { id = item.EmployeeId }, null)*@
-                </td>
-                <td>
-                    @*@Html.DisplayFor(modelItem => item.Name)*@
-                    @Html.ActionLink(item.Name, "Details", "Employees", new { id = item.EmployeeId }, null)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Email)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ExternEmail)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.RG)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.CPF)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Active)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.LastUpdate)
-                </td>
-                <td>
-                    <a asp-action="Delete" asp-route-id="@item.EmployeeId"><span class="glyphicon glyphicon-remove text-danger" aria-hidden="true"></span></a>
-                </td>
+        <tr>
+            <td>@Html.ActionLink(item.Name, "Details", "Employees", new { id = item.EmployeeId }, null)</td>
+            <td>@Html.DisplayFor(modelItem => item.Enrollment)</td>
+            <td>@Html.DisplayFor(modelItem => item.Company.Name)</td>
+            <td>@Html.DisplayFor(modelItem => item.Email)</td>
+            @*<td>@Html.DisplayFor(modelItem => item.ExternEmail)</td>*@
+            <td>@Html.DisplayFor(modelItem => item.RG)</td>
+            <td>@Html.DisplayFor(modelItem => item.CPF)</td>
+            <td>@Html.DisplayFor(modelItem => item.Active)</td>
+            <td>@Html.DisplayFor(modelItem => item.LastUpdate)</td>
+            <td>
+                <a asp-action="Delete" asp-route-id="@item.EmployeeId"><span class="glyphicon glyphicon-remove text-danger" aria-hidden="true"></span></a>
+            </td>
 
-            </tr>
+        </tr>
         }
     </tbody>
     <tfoot>
         <tr class="success">
-            <th>@Html.DisplayNameFor(model => model.Company.Name)</th>
-            <th>@Html.DisplayNameFor(model => model.Enrollment)</th>
             <th>@Html.DisplayNameFor(model => model.Name)</th>
+            <th>@Html.DisplayNameFor(model => model.Enrollment)</th>
+            <th>@Html.DisplayNameFor(model => model.Company.Name)</th>
             <th>@Html.DisplayNameFor(model => model.Email)</th>
-            <th>@Html.DisplayNameFor(model => model.ExternEmail)</th>
+            @*<th>@Html.DisplayNameFor(model => model.ExternEmail)</th>*@
             <th>@Html.DisplayNameFor(model => model.RG)</th>
             <th>@Html.DisplayNameFor(model => model.CPF)</th>
             <th>@Html.DisplayNameFor(model => model.Active)</th>
