--- a/Inventory/Views/Equipments/Edit.cshtml
+++ b/Inventory/Views/Equipments/Edit.cshtml
@@ -20,8 +20,12 @@
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <input type="hidden" asp-for="Equipment.EquipmentId" />
                     <div class="form-group">
+                        <label asp-for="Equipment.EquipmentTypeId" class="control-label"></label>
+                        <select asp-for="Equipment.EquipmentTypeId" asp-items="@(new SelectList(Model.EquipmentTypes,"EquipmentTypeId","Info"))" class="form-control"></select>
+                    </div>
+                    <div class="form-group">
                         <label asp-for="Equipment.EmployeeId" class="control-label"></label>
-                        <select asp-for="Equipment.EmployeeId" asp-items="@(new SelectList(Model.Employees,"EmployeeId","Name"))" class="form-control"></select>
+                        <select asp-for="Equipment.EmployeeId" asp-items="@(new SelectList(Model.Employees,"EmployeeId","Info"))" class="form-control"></select>
                     </div>
                     <div class="form-group">
                         <label asp-for="Equipment.Equity" class="control-label"></label>
@@ -74,16 +78,6 @@
                         <span asp-validation-for="Equipment.GPU" class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                        <label asp-for="Equipment.Manufacturer" class="control-label"></label>
-                        <input asp-for="Equipment.Manufacturer" class="form-control" />
-                        <span asp-validation-for="Equipment.Manufacturer" class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="Equipment.Model" class="control-label"></label>
-                        <input asp-for="Equipment.Model" class="form-control" />
-                        <span asp-validation-for="Equipment.Model" class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
                         <label asp-for="Equipment.ServiceTag" class="control-label"></label>
                         <input asp-for="Equipment.ServiceTag" class="form-control" />
                         <span asp-validation-for="Equipment.ServiceTag" class="text-danger"></span>
@@ -105,7 +99,8 @@
                     </div>
                     <div class="form-group">
                         <label asp-for="Equipment.Note" class="control-label"></label>
-                        <input asp-for="Equipment.Note" class="form-control" />
+                        <!--<input asp-for="Equipment.Note" class="form-control" />-->
+                        <textarea class="form-control" rows="5" placeholder="Observações"></textarea>
                         <span asp-validation-for="Equipment.Note" class="text-danger"></span>
                     </div>
                     <div class="form-group">
