--- a/Inventory/Views/Equipments/Details.cshtml
+++ b/Inventory/Views/Equipments/Details.cshtml
@@ -18,8 +18,8 @@
             <dl class="dl-horizontal">
                 <dt>@Html.DisplayNameFor(model => model.Equipment.EquipmentType.Info)</dt>
                 <dd>@Html.DisplayFor(model => model.Equipment.EquipmentType.Info)</dd>
-                <dt>@Html.DisplayNameFor(model => model.Equipment.Employee.Company.Name)</dt>
-                <dd>@Html.DisplayFor(model => model.Equipment.Employee.Company.Name)</dd>
+                <dt>@Html.DisplayNameFor(model => model.Equipment.Employee.Company.FantasyName)</dt>
+                <dd>@Html.DisplayFor(model => model.Equipment.Employee.Company.FantasyName)</dd>
                 
                 <dt>@Html.DisplayNameFor(model => model.Equipment.Employee.Name)</dt>
                 <dd>@Html.DisplayFor(model => model.Equipment.Employee.Name)</dd>
