--- a/Inventory/Views/Companies/Details.cshtml
+++ b/Inventory/Views/Companies/Details.cshtml
@@ -17,10 +17,16 @@
         <div>
             <dl class="dl-horizontal">
                 <dt>
-                    @Html.DisplayNameFor(model => model.Name)
+                    @Html.DisplayNameFor(model => model.CompanyName)
                 </dt>
                 <dd>
-                    @Html.DisplayFor(model => model.Name)
+                    @Html.DisplayFor(model => model.CompanyName)
+                </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.FantasyName)
+                </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.FantasyName)
                 </dd>
                 <dt>
                     @Html.DisplayNameFor(model => model.CNPJ)
