--- a/Inventory/Views/Companies/Edit.cshtml
+++ b/Inventory/Views/Companies/Edit.cshtml
@@ -20,13 +20,18 @@
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <input type="hidden" asp-for="CompanyId" />
                     <div class="form-group">
-                        <label asp-for="Name" class="control-label"></label>
-                        <input asp-for="Name" class="form-control" />
-                        <span asp-validation-for="Name" class="text-danger"></span>
+                        <label asp-for="CompanyName" class="control-label"></label>
+                        <input asp-for="CompanyName" class="form-control" />
+                        <span asp-validation-for="CompanyName" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="FantasyName" class="control-label"></label>
+                        <input asp-for="FantasyName" class="form-control" />
+                        <span asp-validation-for="FantasyName" class="text-danger"></span>
                     </div>
                     <div class="form-group">
                         <label asp-for="CNPJ" class="control-label"></label>
-                        <input asp-for="CNPJ" class="form-control" placeholder="00.000.000/0000-00"/>
+                        <input asp-for="CNPJ" class="form-control" placeholder="00.000.000/0000-00" />
                         <span asp-validation-for="CNPJ" class="text-danger"></span>
                     </div>
                     <div class="form-group">
