--- a/Inventory/Views/Companies/Index.cshtml
+++ b/Inventory/Views/Companies/Index.cshtml
@@ -19,7 +19,8 @@
 <table id="tabela" class="table table-striped table-hover" style="width:100%">
     <thead>
         <tr class="success">
-            <th>@Html.DisplayNameFor(model => model.Name)</th>
+            <th>@Html.DisplayNameFor(model => model.CompanyName)</th>
+            <th>@Html.DisplayNameFor(model => model.FantasyName)</th>
             <th>@Html.DisplayNameFor(model => model.CNPJ)</th>
             <th>@Html.DisplayNameFor(model => model.Active)</th>
             <th>@Html.DisplayNameFor(model => model.LastUpdate)</th>
@@ -29,18 +30,20 @@
     <tbody>
         @foreach (var item in Model)
         {
-            <tr>
-                <td>@Html.ActionLink(item.Name, "Details", "Companies", new { id = item.CompanyId }, null)</td>
-                <td>@Html.DisplayFor(modelItem => item.CNPJ)</td>
-                <td>@Html.DisplayFor(modelItem => item.Active)</td>
-                <td>@Html.DisplayFor(modelItem => item.LastUpdate)</td>
-                <td><a asp-action="Delete" asp-route-id="@item.CompanyId"><span class="glyphicon glyphicon-remove text-danger" aria-hidden="true"></span></a></td>
-            </tr>
+        <tr>
+            <td>@Html.ActionLink(item.CompanyName, "Details", "Companies", new { id = item.CompanyId }, null)</td>
+            <td>@Html.ActionLink(item.FantasyName, "Details", "Companies", new { id = item.CompanyId }, null)</td>
+            <td>@Html.DisplayFor(modelItem => item.CNPJ)</td>
+            <td>@Html.DisplayFor(modelItem => item.Active)</td>
+            <td>@Html.DisplayFor(modelItem => item.LastUpdate)</td>
+            <td><a asp-action="Delete" asp-route-id="@item.CompanyId"><span class="glyphicon glyphicon-remove text-danger" aria-hidden="true"></span></a></td>
+        </tr>
         }
     </tbody>
     <tfoot>
         <tr class="success">
-            <th>@Html.DisplayNameFor(model => model.Name)</th>
+            <th>@Html.DisplayNameFor(model => model.CompanyName)</th>
+            <th>@Html.DisplayNameFor(model => model.FantasyName)</th>
             <th>@Html.DisplayNameFor(model => model.CNPJ)</th>
             <th>@Html.DisplayNameFor(model => model.Active)</th>
             <th>@Html.DisplayNameFor(model => model.LastUpdate)</th>
