--- a/Inventory/Views/Employees/Delete.cshtml
+++ b/Inventory/Views/Employees/Delete.cshtml
@@ -21,10 +21,16 @@
         <div>
             <dl class="dl-horizontal">
                 <dt>
-                    @Html.DisplayNameFor(model => model.Company.Name)
+                    @Html.DisplayNameFor(model => model.Company.CompanyName)
                 </dt>
                 <dd>
-                    @Html.DisplayFor(model => model.Company.Name)
+                    @Html.DisplayFor(model => model.Company.CompanyName)
+                </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Company.FantasyName)
+                </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Company.FantasyName)
                 </dd>
                 <dt>
                     @Html.DisplayNameFor(model => model.Enrollment)
