--- a/Inventory/Views/Employees/Index.cshtml
+++ b/Inventory/Views/Employees/Index.cshtml
@@ -20,7 +20,7 @@
         <tr class="success">
             <th>@Html.DisplayNameFor(model => model.Name)</th>
             <th>@Html.DisplayNameFor(model => model.Enrollment)</th>
-            <th>@Html.DisplayNameFor(model => model.Company.Name)</th>
+            <th>@Html.DisplayNameFor(model => model.Company.FantasyName)</th>
             <th>@Html.DisplayNameFor(model => model.Email)</th>
             @*<th>@Html.DisplayNameFor(model => model.ExternEmail)</th>*@
             <th>@Html.DisplayNameFor(model => model.RG)</th>
@@ -36,7 +36,7 @@
         <tr>
             <td>@Html.ActionLink(item.Name, "Details", "Employees", new { id = item.EmployeeId }, null)</td>
             <td>@Html.DisplayFor(modelItem => item.Enrollment)</td>
-            <td>@Html.DisplayFor(modelItem => item.Company.Name)</td>
+            <td>@Html.DisplayFor(modelItem => item.Company.FantasyName)</td>
             <td>@Html.DisplayFor(modelItem => item.Email)</td>
             @*<td>@Html.DisplayFor(modelItem => item.ExternEmail)</td>*@
             <td>@Html.DisplayFor(modelItem => item.RG)</td>
@@ -54,7 +54,7 @@
         <tr class="success">
             <th>@Html.DisplayNameFor(model => model.Name)</th>
             <th>@Html.DisplayNameFor(model => model.Enrollment)</th>
-            <th>@Html.DisplayNameFor(model => model.Company.Name)</th>
+            <th>@Html.DisplayNameFor(model => model.Company.FantasyName)</th>
             <th>@Html.DisplayNameFor(model => model.Email)</th>
             @*<th>@Html.DisplayNameFor(model => model.ExternEmail)</th>*@
             <th>@Html.DisplayNameFor(model => model.RG)</th>
