--- a/Inventory/Views/EquipmentTypes/Details.cshtml
+++ b/Inventory/Views/EquipmentTypes/Details.cshtml
@@ -1,36 +1,43 @@
 ﻿@model Inventory.Models.EquipmentType
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Visualizando tipo de Equipamento";
 }
 
-<h2>Details</h2>
+<ol class="breadcrumb">
+    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
+    <li><a asp-area="" asp-controller="EquipmentTypes" asp-action="Index">Tipos de Equipamentos</a></li>
+    <li class="active">Visualizar</li>
+</ol>
 
-<div>
-    <h4>EquipmentType</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Type)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Type)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Manufacturer)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Manufacturer)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Model)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Model)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.EquipmentTypeId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+<div class="panel panel-default">
+    <div class="panel-heading"><span class="glyphicon glyphicon-search" aria-hidden="true"></span> @ViewData["Title"] </div>
+    <div class="panel-body">
+        <div>
+            <dl class="dl-horizontal">
+                <dt>
+                    @Html.DisplayNameFor(model => model.Type)
+                </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Type)
+                </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Manufacturer)
+                </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Manufacturer)
+                </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Model)
+                </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Model)
+                </dd>
+            </dl>
+        </div>
+        <div>
+            <a asp-action="Index" class="btn btn-info"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span> Voltar</a> |
+            <a asp-action="Edit" asp-route-id="@Model.EquipmentTypeId" class="btn btn-warning"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span> Editar</a>
+        </div>
+    </div>
 </div>
