--- a/Inventory/Views/EquipmentTypes/Index.cshtml
+++ b/Inventory/Views/EquipmentTypes/Index.cshtml
@@ -1,47 +1,48 @@
 ﻿@model IEnumerable<Inventory.Models.EquipmentType>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Tipos de Equipamentos";
 }
 
-<h2>Index</h2>
+<ol class="breadcrumb">
+    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
+    <li class="active">Tipos de Equipamentos</li>
+</ol>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
+<div class="panel panel-default">
+    <div class="panel-heading"><span class="glyphicon glyphicon-list" aria-hidden="true"></span> @ViewData["Title"] <span class="badge">@Model.Count().ToString()</span></div>
+    <div class="panel-body">
+        <p><a asp-action="Create" class="btn btn-success"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Inserir</a></p>
+    </div>
+</div>
+
+<table id="tabela" class="table table-striped table-hover" style="width:100%">
     <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Type)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Manufacturer)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Model)
-            </th>
-            <th></th>
+        <tr class="success">
+            <th>@Html.DisplayNameFor(model => model.Type)</th>
+            <th>@Html.DisplayNameFor(model => model.Manufacturer)</th>
+            <th>@Html.DisplayNameFor(model => model.Model)</th>
+            <th>Remover</th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+        @foreach (var item in Model)
+        {
         <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Type)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Manufacturer)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Model)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.EquipmentTypeId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.EquipmentTypeId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.EquipmentTypeId">Delete</a>
-            </td>
+            <td>@Html.ActionLink(item.Type, "Details", "EquipmentTypes", new { id = item.EquipmentTypeId }, null)</td>
+            
+            <td>@Html.DisplayFor(modelItem => item.Manufacturer)</td>
+            <td>@Html.DisplayFor(modelItem => item.Model)</td>
+            <td><a asp-action="Delete" asp-route-id="@item.EquipmentTypeId"><span class="glyphicon glyphicon-remove text-danger" aria-hidden="true"></span></a></td>
         </tr>
-}
+        }
     </tbody>
+    <tfoot>
+        <tr class="success">
+            <th>@Html.DisplayNameFor(model => model.Type)</th>
+            <th>@Html.DisplayNameFor(model => model.Manufacturer)</th>
+            <th>@Html.DisplayNameFor(model => model.Model)</th>
+            <th>Remover</th>
+        </tr>
+    </tfoot>
 </table>
