--- a/Inventory/Views/Equipments/Create.cshtml
+++ b/Inventory/Views/Equipments/Create.cshtml
@@ -20,7 +20,7 @@
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <div class="form-group">
                         <label asp-for="Equipment.EmployeeId" class="control-label"></label>
-                        <select asp-for="Equipment.EmployeeId" asp-items="@(new SelectList(Model.Employees,"EmployeeId","Info"))" class="form-control"></select>
+                        <select asp-for="Equipment.EmployeeId" asp-items="@(new SelectList(Model.Employees,"EmployeeId","Name"))" class="form-control"></select>
                     </div>
                     <div class="form-group">
                         <label asp-for="Equipment.EquipmentTypeId" class="control-label"></label>
@@ -99,7 +99,7 @@
                     <div class="form-group">
                         <label asp-for="Equipment.Note" class="control-label"></label>
                         <!--<input asp-for="Equipment.Note" class="form-control" />-->
-                        <textarea class="form-control" rows="5" placeholder="Observações"></textarea>
+                        <textarea asp-for="Equipment.Note" class="form-control" rows="5" placeholder="Observações"></textarea>
                         <span asp-validation-for="Equipment.Note" class="text-danger"></span>
                     </div>
                     <hr />
