--- a/Inventory/Views/Equipments/Edit.cshtml
+++ b/Inventory/Views/Equipments/Edit.cshtml
@@ -25,7 +25,7 @@
                     </div>
                     <div class="form-group">
                         <label asp-for="Equipment.EmployeeId" class="control-label"></label>
-                        <select asp-for="Equipment.EmployeeId" asp-items="@(new SelectList(Model.Employees,"EmployeeId","Info"))" class="form-control"></select>
+                        <select asp-for="Equipment.EmployeeId" asp-items="@(new SelectList(Model.Employees,"EmployeeId","Name"))" class="form-control"></select>
                     </div>
                     <div class="form-group">
                         <label asp-for="Equipment.Equity" class="control-label"></label>
@@ -98,9 +98,8 @@
                         <span asp-validation-for="Equipment.Maintenance" class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                        <label asp-for="Equipment.Note" class="control-label"></label>
-                        <!--<input asp-for="Equipment.Note" class="form-control" />-->
-                        <textarea class="form-control" rows="5" placeholder="Observações"></textarea>
+                        <label asp-for="Equipment.Note" class="control-label"></label>                        
+                        <textarea asp-for="Equipment.Note" class="form-control" rows="5" placeholder="Observações"></textarea>
                         <span asp-validation-for="Equipment.Note" class="text-danger"></span>
                     </div>
                     <div class="form-group">
