--- a/Inventory/Views/Equipments/EquipmentsUnderWarranty.cshtml
+++ b/Inventory/Views/Equipments/EquipmentsUnderWarranty.cshtml
@@ -68,7 +68,7 @@
                     @Html.DisplayFor(modelItem => item.LastUpdate)
                 </td>
                 <td>
-                    <a asp-action="Delete" asp-route-id="@item.EquipmentId"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></a>
+                    <a asp-action="Delete" asp-route-id="@item.EquipmentId"><span class="glyphicon glyphicon-remove text-danger" aria-hidden="true"></span></a>
                 </td>
             </tr>
         }
