--- a/Inventory/Views/Employees/Edit.cshtml
+++ b/Inventory/Views/Employees/Edit.cshtml
@@ -21,7 +21,7 @@
                     <input type="hidden" asp-for="Employee.EmployeeId" />
                     <div class="form-group">
                         <label asp-for="Employee.CompanyId" class="control-label"></label>
-                        <select asp-for="Employee.CompanyId" asp-items="@(new SelectList(Model.Companies,"CompanyId","Name"))" class="form-control"></select>
+                        <select asp-for="Employee.CompanyId" asp-items="@(new SelectList(Model.Companies,"CompanyId","FantasyName"))" class="form-control"></select>
                     </div>
                     <div class="form-group">
                         <label asp-for="Employee.Enrollment" class="control-label"></label>
