--- a/Inventory/Views/Shared/_Layout.cshtml
+++ b/Inventory/Views/Shared/_Layout.cshtml
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="~/css/jquery.dataTables.min.css" />
         <!-- Bootstrap -->
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap-superhero.css" />
+        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/custom.css" />
         <link rel="stylesheet" href="~/css/site.css" />
     </environment>
     <environment exclude="Development">
@@ -22,8 +23,14 @@
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
     </environment>
     <!--Start-->
-    <script type="text/javascript" language="javascript" src="https://code.jquery.com/jquery-3.5.1.js"></script>    
-    
+
+    <style>
+
+        
+    </style>
+
+    <script type="text/javascript" language="javascript" src="https://code.jquery.com/jquery-3.5.1.js"></script>
+
     <script>
         $(document).ready(function () {
             $('#tabela').DataTable();
@@ -59,7 +66,7 @@
                     <li class="Filtros">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Filtros <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a asp-area="" asp-controller="Equipments" asp-action="EquipmentsUnderWarranty">Equipamentos na garantia</a></li>                            
+                            <li><a asp-area="" asp-controller="Equipments" asp-action="EquipmentsUnderWarranty">Equipamentos na garantia</a></li>
                         </ul>
                     </li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
